kubernetes/apps/security/infisical/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: infisical
  annotations:
    gatus.home-operations.com/endpoint: |-
      name: infisical
spec:
  hostnames: ["infisical.${SECRET_DOMAIN}"]
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: infisical-infisical
          namespace: security
          port: 8080
